--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-use-measure": "^2.1.1",
     "tailwind-merge": "^2.5.4",
-    "zebar": "^3.0.1"
+    "twglow": "^0.0.10",
+    "zebar": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@eslint/js": "^9.13.0",
-    "@types/node": "^22.10.5",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/dotenv": "^8.2.3",
+    "@types/node": "^22.15.29",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
@@ -38,7 +42,7 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2",
-    "vite": "^5.4.10",
-    "vite-plugin-node": "^4.0.0"
+    "vite": "^7.2.6",
+    "vite-plugin-node": "^7.0.0"
   }
 }
